check all pages = index8

--- a/src/component/footer.hbs
+++ b/src/component/footer.hbs
@@ -6,11 +6,9 @@
     {{>link href=linkedin.href text=linkedin.text blank=true noLine=true}}
     {{/with}}
 </div>
-<br>
-<div>
+<div class="py-3">
     <em>Copiright by {{../header/name/firstname}} {{../header/name/lastname}}</em>
 </div>
-<br>
 <div>
     <address>
         Address: {{../header/address}}
