--- a/src/component/ul.hbs
+++ b/src/component/ul.hbs
@@ -1,6 +1,6 @@
-<ul>
+<ul class="list-group">
     {{#each data}}
-    <li>
+    <li class="list-group-item">
         {{this}}
     </li>
     {{/each}}
