--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -1,11 +1,23 @@
-{{!-- 
-Це код container файлу для index сторінки, 
+{{!--
+Це код container файлу для index сторінки,
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
- --}}
-
-<h1>Hello world</h1>
-
-{{!-- 
-    Цей код містить лише те, що буде виводитись в <body>
-    Адже наш layout/default.hbs має вже структуру HTML
 --}}
+
+<main>
+    <h1>{{title}}</h1>
+    <p class="py-5">
+        text in progress...
+    </p>
+    {{#each navigation}}
+    <div class="pb-3 d-grid gap-2 col-2">
+        <a type="button" class="btn btn-primary" href={{link}}>{{text}}</a>
+    </div>
+    {{/each}}
+</main>
+
+{{!--
+Цей код містить лише те, що буде виводитись в
+
+<body>
+    Адже наш layout/default.hbs має вже структуру HTML
+    --}}
