--- a/src/container/program.hbs
+++ b/src/container/program.hbs
@@ -1,50 +1,59 @@
-<h1>Program</h1>
-<section>
-    {{#with program}}
-    {{>title data='Excursion' big=true }}
-    {{#with excursion}}
-    {{>title data=name}}
-    <br>
-    {{>address }}
-    <br>
+<main>
+    <header class="text-center">
+        <h1>Program</h1>
+        {{#with program}}
+        {{>title data='Excursion' big=true }}
+        {{#with excursion}}
+        {{>title data=name}}
+        {{>address }}
+        <div class="py-3">
+            {{>date data=date}}
+        </div>
+    </header>
+    <hr>
     <div>
-        {{>date data=date}}
-    </div>
-    <div>
-        {{>title data='Program'}}
-        <ol type="1">
+        <div class="text-center">
+            {{>title data='Program'}}
+        </div>
+
+        <div class="row">
             {{#each program}}
-            <li>
-                {{>title data=name}}
-                <div>
-                    Topic: {{type}}
+            <div class="col-6  ">
+                <div class="card me-1">
+                    <div class="card-body">
+                        <ul>
+                            <li>
+                                {{>title data=name}}
+                                <div>
+                                    Topic: {{type}}
+                                </div>
+                                <div>
+                                    Duration:
+                                    <time>
+                                        {{duration}}
+                                    </time>
+                                    hours
+                                </div>
+                                <div class="py-3">
+                                    <b>Details:</b>
+                                </div>
+                                <div>
+                                    {{#with details}}
+                                    {{>museum mus=true}}
+                                    {{>museum mus=false}}
+                                    {{/with}}
+                                    {{>guide data=details.guide}}
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <br>
-                <div>
-                    Duration:
-                    <time>
-                        {{duration}}
-                    </time>
-                    hours
-                </div>
-                <br>
-                <div>
-                    <b>Details:</b>
-                </div>
-                <br>
-                <div>
-                    {{#with details}}
-                    {{>museum mus=true}}
-                    {{>museum mus=false}}
-                    {{/with}}
-                    <br>
-                    {{>guide data=details.guide}}
-                </div>
-            </li>
-            {{>line }}
+            </div>
             {{/each}}
-        </ol>
+        </div>
+
+    </div>
     </div>
     {{/with}}
     {{/with}}
-</section>
+</main>
