--- a/src/container/skills.hbs
+++ b/src/container/skills.hbs
@@ -3,7 +3,7 @@
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/summary"
 --}}
 
-<div>
+<main>
     {{#with main}}
     <main>
         {{>title data='All skills' big=true}}
@@ -13,11 +13,8 @@
                 <li>
                     {{name}}
                     {{#if point includeZero=true}}({{point}}){{/if}}
-
                     {{#if isTop}}(top skill){{/if}}
-
                     {{#unless point includeZero=true}}(не вивчаємо){{/unless}}
-
                     {{#unless point}}
                     {{#if point includeZero=true}}(зараз вивчаємо){{/if}}
                     {{/unless}}
@@ -38,7 +35,7 @@
         </section>
     </main>
     {{/with}}
-</div>
+</main>
 
 {{!--
 Цей код містить лише те, що буде виводитись в {{{body}}} в layout/default.hbs
