--- a/src/layout/default.hbs
+++ b/src/layout/default.hbs
@@ -11,40 +11,46 @@
 	</title>
 	<meta charset='utf-8' />
 	<link href='css/index.css' rel='stylesheet' />
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
 <body>
-	{{#with header}}
+
 	<header>
-		<div>
+		{{#with header}}
+		<div class="pb-5">
 			<h1>{{name.firstname}} {{name.lastname}} | Resume</h1>
 		</div>
 		<div>
 			<b>{{position}}</b>
 		</div>
-		<br>
-		<div>
+		<div class="py-3">
 			<em>
 				Salary: {{salary}}
 			</em>
 		</div>
-		<br>
-		<div>
+		<div class="pb-3">
 			<address>
 				Address: {{address}}
 			</address>
 		</div>
-		<br>
 		<hr>
+		{{/with}}
 	</header>
-	{{/with}}
+
 
 	{{>nav}}
 	{{! ↓ ця кострукція показує куди шаблонізатору треба вставляти код з container файлу --}}
 	{{{body}}}
 	<hr>
-	<br>
-	{{>footer}}
+	<footer class="pt-3">
+		{{>footer}}
+	</footer>
+
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
