--- a/src/layout/index.hbs
+++ b/src/layout/index.hbs
@@ -1,7 +1,3 @@
-{{!--
-Це леяут по замовчюванню, котрий вже містить базову структуру HTML документа
-І котрий обгортає код container файлів для будь-яких ендпоїнтів
---}}
 <!DOCTYPE html>
 <html>
 
@@ -14,21 +10,32 @@
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+
 </head>
 
 <body>
 	<header>
-		{{>nav}}
+		<div class="card">
+			<div class="card-body row">
+				<div class="col-6">
+					<strong>
+						{{author.name}} {{author.surname}}
+					</strong>
+				</div>
+				<div class="col-6 text-end">
+					<strong>
+						{{projectName}}
+					</strong>
+				</div>
+			</div>
+		</div>
 	</header>
-	<hr>
-	{{! ↓ ця кострукція показує куди шаблонізатору треба вставляти код з container файлу --}}
+
 	{{{body}}}
-	<hr>
-	<footer>
-		{{>footer}}
-	</footer>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
